--- a/css/style.css
+++ b/css/style.css
@@ -440,37 +440,53 @@ footer{
 
 
 
-
-/** PAGINA carrito**/
+/* PAGINA carrito */
 .h4-titulo{
     font-size: 30px;
 }
+.fondo{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .grid-carrito{
-    width: 850px;
-    height: 600px;
+    width: 90%;
+    height: 650px;
     display: grid;
-    grid-template-columns: 66% 1fr;
+    grid-template-columns: 65% 35%;
     grid-template-rows: repeat(4,1fr);
-    margin-left: 300px ;
-    margin-top: 40px;
+    place-items: center;
+    gap: 5px;
 }
 .resumen1{
+    width: 95%;
+    height: 95%;
     grid-column: 1/2;
     grid-row: 1/3;
-    margin: 5px;
     display: flex;
     flex-direction: row;
     background-color: beige;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 .resumen2{
+    width: 95%;
+    height: 95%;
     grid-column: 1/2;
     grid-row: 3/5;
-    margin: 5px;
     display: flex;
     flex-direction: row;
     background-color: beige;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
 }
 .resumen3{
+    width: 100%;
+    height: 95%;
     grid-column: 2/3;
     grid-row: 2/5;
     margin: 5px;
@@ -484,18 +500,13 @@ footer{
 .resumen3 h4{
     font-size: 20px;
 }
-
 .resumen1-img img{
     width: 280px;
     height: 280px;
-    margin-left: 10px;
-    margin-right: 40px;
 }
 .resumen2-img img{
     width: 280px;
     height: 280px;
-    margin-left: 10px;
-    margin-right: 40px;
 }
 .resumen1-text{
     display: flex;
@@ -588,14 +599,14 @@ footer{
 
 
 /**SECCION RESPONSIVA**/
-/** MEDIA QUERIES - RESPONSIVE **/
+/** MEDIA QUERYS **/
 /**medidas de trabajo:
 Laptop   -> 1024px
 tablet   -> 768px
 mobile L -> 425px
 mobile M -> 375px   **/
 
-/**Media Querys - Aplicaré al header y footer de los 5 htmls y a las páginas Index y ...**/
+/**Media Querys - Aplicaré al header y footer de los 5 htmls y a las páginas Index y Carrito**/
 @media(max-width:1024px){
     .grid-banner img{
         height: 520px;
@@ -638,10 +649,29 @@ mobile M -> 375px   **/
         width: 220px;
         height: 220px;
     }
+    
+    /* PAGINA Carrito */
+    .resumen1-img img{
+        width: 200px;
+        height: 200px;
+    }
+    .resumen1-text{
+        gap: 5px;
+    }
+    .resumen2-img img{
+        width: 200px;
+        height: 200px;
+    }
+    .resumen2-text{
+        gap: 5px;
+    }
 }
 
 
 @media (max-width:768px){
+    header{
+        position: inherit;
+    }
     header .login a {
         display: none;
     }
@@ -739,16 +769,36 @@ mobile M -> 375px   **/
     }
 
     .footer-flex{
-    height: 370px;
+        height: 370px;
         flex-direction: column;
         justify-content: center;
         gap: 30px;
-}
+    }
+
+        /* PAGINA Carrito */
+    .grid-carrito{
+        height: 800px;
+    }
+    .resumen3{
+        grid-row: 3/5;
+    }
+    .resumen1{
+        flex-direction: column;
+    }
+    .resumen2{
+        flex-direction: column;
+    }
+    .resumen1-text{
+        align-items: center;
+    }
+    .resumen2-text{
+        align-items: center;
+    }
+    .grid-carrito{
+        grid-template-columns: 60% 40%;
+    }
 }
 @media(max-width:425px){
-    header{
-        position: inherit;
-    }
     .item2-nav ul{
         display: flex;
         flex-direction: column;
@@ -800,5 +850,21 @@ mobile M -> 375px   **/
         }
         .recomendados-grid img{
             margin-bottom: 15px;
+        }
+
+        /* PAGINA Carrito */
+        .grid-carrito{
+            height: auto;
+            display: flex;
+            flex-direction: column;
+        }
+        .resumen1{
+            height: 400px;
+        }
+        .resumen2{
+            height: 400px;
+        }
+        .resumen3{
+            height: 350px;
         }
     }
