--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,4 @@
+/*HEADER*/
 header {
     width: 100wv;
     height: auto;
@@ -7,24 +8,51 @@ header {
     display: grid;
     grid-template-columns: 35% 30% 35%;
     grid-template-rows: 80% 20%;
-    div{
-        nav{
-            ul{
-                list-style: none;
-                li{
-                    display: inline-block;
-                    margin: 10px;
-                    a{
-                        text-decoration: none;
-                        font-size: 23px;
-                        &:hover{
-                            color: rgb(71, 70, 70);
-                            text-decoration: underline;
-                            font-weight: bold;
-                        }
-                    }
-                }
-            }
-        }
+    div nav ul {
+        list-style: none;
     }
+}
+nav ul li {
+    display: inline-block;
+    margin: 10px;
+}
+header div nav ul li a {
+    text-decoration: none;
+    font-size: 23px;
+    &:hover {
+        color: rgb(71, 70, 70);
+        text-decoration: underline;
+        font-weight: bold;
+    }
+}
+.login a {
+    text-decoration: none;
+}
+.item1-logoserene {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    justify-self: center;
+}
+.item2-nav {
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin-left: 30px;
+    align-self: self-end;
+}
+.item3-login {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    justify-self: end;
+    margin-top: 10px;
+    margin-right: 10%;
+    &:hover {
+        text-decoration: underline;
+        font-size: 18px;
+    }
+}
+.item4-search {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    justify-self: end;
+    margin-right: 10%;
 }
