--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,2 +1,9 @@
 @import "./base/reset";
+
 @import "./layout/header";
+@import "./layout/footer";
+@import "./layout/main-index";
+@import "./layout/main-general";
+@import "./layout/main-bags-accesorios";
+@import "./layout/main-carrito";
+@import "./layout/main-preguntasfrec";
