--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
+@import "./utilities/variables";
+
 @import "./base/reset";
 
 @import "./layout/header";
@@ -7,3 +9,11 @@
 @import "./layout/main-bags-accesorios";
 @import "./layout/main-carrito";
 @import "./layout/main-preguntasfrec";
+
+@import "./components/cards";
+
+
+@import "./layout/MediaQ/media1024";
+@import "./layout/MediaQ/media768";
+@import "./layout/MediaQ/media425";
+@import "./layout/MediaQ/media375";
