--- a/sass/layout/_main-general.scss
+++ b/sass/layout/_main-general.scss
@@ -1,6 +1,6 @@
 /**Fondo blanco todas paginas secundarias**/
 .fondo{
     height: auto;
-    background-color: white;
+    background-color: $color-fondo-todaspag-secundarias;
     margin: 10px;
 }
