--- a/sass/layout/_main-bags-accesorios.scss
+++ b/sass/layout/_main-bags-accesorios.scss
@@ -7,9 +7,8 @@
     grid-template-areas: "item1 item2 item3 item4" "item5 item6 item7 item8" "item9 item10 item11 item12";
 
     div {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        background-color: map-get($colores-cards, color4);
+        @include flex-flow(column,wrap,none,center,none);
         margin: 10px;
         margin-bottom: 100px;
     }
@@ -17,7 +16,7 @@
     img {
         width: 300px;
         height: 300px;
-        margin-bottom: 30px;
+        margin: 20px;
     }
 
     h4 {
@@ -37,5 +36,6 @@
         height: 30px;
         font-size: 18px;
         margin-left: 20px;
+        margin-bottom: 15px;
     }
 }
