--- a/sass/layout/_main-carrito.scss
+++ b/sass/layout/_main-carrito.scss
@@ -1,3 +1,4 @@
+/*PAGINA carrito*/
 .h4-titulo {
     font-size: 30px;
 }
@@ -5,9 +6,7 @@
 .fondo {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex-flow(column,wrap,none,center,none);
 }
 
 .grid-carrito {
@@ -25,12 +24,8 @@
     height: 95%;
     grid-column: 1/2;
     grid-row: 1/3;
-    display: flex;
-    flex-direction: row;
     background-color: beige;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+    @include flex-flow(row,wrap,center,center,15px);
 }
 
 .resumen2 {
@@ -38,12 +33,8 @@
     height: 95%;
     grid-column: 1/2;
     grid-row: 3/5;
-    display: flex;
-    flex-direction: row;
     background-color: beige;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+    @include flex-flow(row,wrap,center,center,15px);
 }
 
 .resumen3 {
@@ -52,12 +43,8 @@
     grid-column: 2/3;
     grid-row: 2/5;
     margin: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: beige;
-    gap: 20px;
+    @include flex-flow(column,wrap,center,center,20px);
 
     h4 {
         font-size: 20px;
