--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -1,9 +1,9 @@
-/**MAIN**/
+/*MAIN-index*/
 
 main {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: $color-fondo-main;
 }
 h2 {
     font-family: Rubik;
@@ -14,7 +14,7 @@ h3 {
 }
 h4 {
     font-family: Roboto;
-    color: rgb(8, 8, 100);
+    color: $color-letra-h4;
 }
 h6 {
     font-family: Roboto;
