--- a/sass/layout/_main-general.scss
+++ b/sass/layout/_main-general.scss
@@ -1,5 +1,6 @@
 /**Fondo blanco todas paginas secundarias**/
 .fondo{
+    width: 100%;
     height: auto;
     background-color: $color-fondo-todaspag-secundarias;
     margin: 10px;
