--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import "./utilities/variables";
 @import "./utilities/mapas";
 @import "./utilities/mixin";
+@import "./utilities/extends";
 
 @import "./base/reset";
 
