--- a/sass/layout/_main-preguntasfrec.scss
+++ b/sass/layout/_main-preguntasfrec.scss
@@ -61,6 +61,7 @@
     }
 }
 
+/* reemplazado por BS, ver partial sass
 .flex-preg-frec {
     display: flex;
     flex-direction: column;
@@ -74,3 +75,4 @@
         justify-content: center;
     }
 }
+*/
