--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@
 @import "./layout/main-preguntasfrec";
 
 @import "./components/cards";
+@import "./components/bootstrap";
 
 
 @import "./layout/MediaQ/media1024";
