--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,20 @@ h6 {
   padding: 10px; }
 
 /*pagina billeteras*/
+/* no anduvo 
+.navbar-nav .nav-link{
+    color: #333; 
+    font-size: 16px; 
+    font-weight: 500; 
+    text-transform: uppercase; 
+    padding: 0.5rem 1rem;
+}
+
+.navbar-nav .nav-link:hover{
+    color: #007bffe3;
+    text-decoration: none;
+} 
+*/
 @media (max-width: 1024px) {
   /*index*/
   .grid-banner img {
