falta optimizar responsive

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,4 @@
-/*HEADER*/
+/*HEADER -- ver bootstrap
 header {
     width: 100wv;
     height: auto;
@@ -56,3 +56,5 @@ header div nav ul li a {
     justify-self: end;
     margin-right: 10%;
 }
+
+*/
