--- a/css/style.css
+++ b/css/style.css
@@ -5,62 +5,66 @@
   padding: 0;
   box-sizing: border-box; }
 
-/*HEADER*/
+/*HEADER -- ver bootstrap
 header {
-  width: 100wv;
-  height: auto;
-  background-color: white;
-  position: sticky;
-  top: 0;
-  display: grid;
-  grid-template-columns: 35% 30% 35%;
-  grid-template-rows: 80% 20%; }
-  header div nav ul {
-    list-style: none; }
-
+    width: 100wv;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    position: sticky;
+    top: 0;
+    display: grid;
+    grid-template-columns: 35% 30% 35%;
+    grid-template-rows: 80% 20%;
+    div nav ul {
+        list-style: none;
+    }
+}
 nav ul li {
-  display: inline-block;
-  margin: 10px; }
-
+    display: inline-block;
+    margin: 10px;
+}
 header div nav ul li a {
-  text-decoration: none;
-  font-size: 23px; }
-  header div nav ul li a:hover {
-    color: #474646;
-    text-decoration: underline;
-    font-weight: bold; }
-
+    text-decoration: none;
+    font-size: 23px;
+    &:hover {
+        color: rgb(71, 70, 70);
+        text-decoration: underline;
+        font-weight: bold;
+    }
+}
 .login a {
-  text-decoration: none; }
-
+    text-decoration: none;
+}
 .item1-logoserene {
-  grid-column: 2/3;
-  grid-row: 1/2;
-  justify-self: center; }
-
+    grid-column: 2/3;
+    grid-row: 1/2;
+    justify-self: center;
+}
 .item2-nav {
-  grid-column: 1/3;
-  grid-row: 2/3;
-  margin-left: 30px;
-  align-self: self-end; }
-
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin-left: 30px;
+    align-self: self-end;
+}
 .item3-login {
-  grid-column: 3/4;
-  grid-row: 1/2;
-  justify-self: end;
-  margin-top: 10px;
-  margin-right: 10%; }
-  .item3-login:hover {
-    text-decoration: underline;
-    font-size: 18px; }
-
+    grid-column: 3/4;
+    grid-row: 1/2;
+    justify-self: end;
+    margin-top: 10px;
+    margin-right: 10%;
+    &:hover {
+        text-decoration: underline;
+        font-size: 18px;
+    }
+}
 .item4-search {
-  grid-column: 3/4;
-  grid-row: 2/3;
-  justify-self: end;
-  margin-right: 10%; }
+    grid-column: 3/4;
+    grid-row: 2/3;
+    justify-self: end;
+    margin-right: 10%;
+}
 
-/*FOOTER*/
+*/
 footer {
   background-color: #9c9c9c; }
 
@@ -550,7 +554,40 @@ h6 {
   text-align: start;
   padding: 10px; }
 
-/*pagina billeteras*/
+/*header bags minibags billeteras accesorios */
+.header-BS {
+  width: 100%;
+  height: auto;
+  background-color: white;
+  position: sticky;
+  top: 0;
+  display: grid;
+  grid-template-columns: 35% 30% 35%;
+  grid-template-rows: 80% 20%; }
+  .header-BS div nav ul {
+    list-style: none; }
+
+.nav-item {
+  margin: 3px; }
+
+.nav-item a {
+  font-size: 20px; }
+  .nav-item a:hover {
+    color: #474646;
+    text-decoration: underline;
+    font-weight: bold; }
+
+.block3header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; }
+
+.login, .carrito-search {
+  margin-bottom: 50px; }
+
+.login {
+  font-size: 13px; }
+
 /* no anduvo 
 .navbar-nav .nav-link{
     color: #333; 
