--- a/sass/components/_bootstrap.scss
+++ b/sass/components/_bootstrap.scss
@@ -11,4 +11,39 @@
     padding: 10px;
 }
 
-/*pagina billeteras*/
+/*header bags minibags billeteras accesorios */
+.header-BS{
+    width: 100%;
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    position: sticky;
+    top: 0;
+    display: grid;
+    grid-template-columns: 35% 30% 35%;
+    grid-template-rows: 80% 20%;
+    div nav ul {
+        list-style: none;
+    }
+}
+.nav-item{
+    margin: 3px;
+}
+.nav-item a{
+    font-size: 20px;
+    &:hover {
+        color: rgb(71, 70, 70);
+        text-decoration: underline;
+        font-weight: bold;
+    }
+}
+.block3header{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.login, .carrito-search {
+    margin-bottom: 50px;
+}
+.login{
+    font-size: 13px;
+}
