--- a/sass/layout/MediaQ/_media425.scss
+++ b/sass/layout/MediaQ/_media425.scss
@@ -1,14 +1,6 @@
 @media (max-width: 425px) {
-    .item2-nav ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .carrito-search {
-        width: 80px;
-    }
 
-
+/*banner index*/
     .grid-banner {
         img {
             height: 250px;
@@ -20,14 +12,19 @@
             font-size: 11px;
         }
     }
+
+/*carteles y productos index*/
     .flex-productos {
         flex-direction: column;
         align-items: center;
-    }
-    .cartelPic {
-        width: 70%;
         height: auto;
     }
+    .cartelPic {
+        width: 80%;
+        height: auto;
+    }
+
+/*bloque central index*/
     .bloque-central-grids {
         height: auto;
         display: flex;
@@ -37,6 +34,10 @@
     .bloque-envios {
         flex-direction: row;
         height: 100px;
+    }
+    .envios img{
+        width: 30px;
+        height: 30px;
     }
     .bloque-nuevos-ingresos {
         height: auto;
@@ -55,7 +56,11 @@
             width: 150px;
         }
     }
+    .bloque-nuevos-ingresos h2{
+        font-size: 12px;
+    }
 
+    /*productos recomendados index*/
     .recomendados-grid {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 25% 8% 25% 8% 25% 8%;
@@ -65,34 +70,36 @@
         }
     }
 
+    /*footer*/
     .footer-flex {
-        height: 300px;
+        height: 400px;
+        gap: 5px;
     }
 
     .item1-ubi-mail {
         display: flex;
         flex-direction: column;
-
+        gap: 5px;
         img {
             width: 25px;
             height: 25px;
         }
     }
+    .sobre-preg{
+        font-size: 20px;
+        margin-top: 5px;
+    }
 
     /* PAGINA Carrito */
 
-    .grid-carrito {
+    /*PAGINA PREGUNTAS FRECUENTES*/
+    .grid-preg-frec{
         height: auto;
         display: flex;
         flex-direction: column;
+        gap: 15px;
     }
-
-    .resumen1,
-    .resumen2 {
-        height: 400px;
-    }
-
-    .resumen3 {
-        height: 350px;
+    .h4-titulo{
+        font-size: 24px;
     }
 }
