--- a/sass/layout/_main-index.scss
+++ b/sass/layout/_main-index.scss
@@ -6,7 +6,7 @@ main {
 }
 h2 {
     font-family: Rubik;
-    color: rgb(123, 29, 29);
+    color: black;
 }
 h3 {
     font-family: Rubik;
@@ -91,7 +91,7 @@ h6 {
 .flex-productos {
     display: flex;
     width: 100%;
-    height: auto;
+    height: 420px;
     flex-direction: row;
     justify-content: space-between;
     margin: 10px 5px 10px 5px;
@@ -111,7 +111,7 @@ h6 {
 .bloque-central-grids {
     display: grid;
     width: 100%;
-    height: 500px;
+    height: auto;
     grid-template-columns: 74% 24%;
     grid-template-rows: 40% 60%;
     grid-template-areas: "item1 item3" "item2 item3";
@@ -120,7 +120,7 @@ h6 {
 }
 .bloque-envios {
     width: 100%;
-    height: auto;
+    height: 150px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -171,7 +171,7 @@ h6 {
 .bloque-newsletter {
     grid-area: item3;
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
