--- a/sass/layout/_main-preguntasfrec.scss
+++ b/sass/layout/_main-preguntasfrec.scss
@@ -4,21 +4,6 @@
     margin-bottom: 10px;
 }
 
-.preguntas {
-    width: 80%;
-    height: 240px;
-    padding: 15px 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: beige;
-    img {
-        width: 70px;
-        height: 70px;
-    }
-}
-
 .grid-preg-frec {
     width: 100%;
     height: 500px;
@@ -60,19 +45,29 @@
         grid-area: item8;
     }
 }
-
-/* reemplazado por BS, ver partial sass
-.flex-preg-frec {
+.preguntas {
+    width: 80%;
+    height: 240px;
+    padding: 15px 5px;
     display: flex;
     flex-direction: column;
-    li {
-        height: 35px;
-        margin: 5px;
-        background-color: beige;
-        border: 1px solid rgb(74, 51, 51);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    justify-content: center;
+    align-items: center;
+    background-color: beige;
+    img {
+        width: 70px;
+        height: 70px;
     }
 }
-*/
+
+/*BS pagina preguntas frecuentes*/
+.contenedorcontenedorespregfrec{
+    width: 100vw;
+}
+.contenedoresitemspregfrec{
+    width: 100vw;
+    background-color: beige;
+    margin-bottom: 15px;
+    text-align: start;
+    padding: 10px;
+}
